--- a/css/light-theme.css
+++ b/css/light-theme.css
@@ -11,14 +11,16 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-	background: rgb(207, 207, 207);
+	background: rgb(180, 180, 180);
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-	background: rgb(196, 196, 196);
+	background: rgb(160, 160, 160);
 }
-
+#window-controls .button:hover {
+	background-color: rgb(200, 200, 200);
+}
 body {
 	background-color: rgb(240, 240, 240);
 	color: black;
@@ -63,7 +65,7 @@ button:not(.button-header):hover {
 	border: 1px solid black;
 }
 .tbody-data div:hover {
-	background-color: rgb(240, 240, 240);
+	background-color: rgb(220, 220, 220);
 }
 .hide-show:hover {
 	background-color: rgb(200, 200, 200);
